--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,6 +4,8 @@
           android:versionCode="1"
           android:versionName="1.0">
 
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="14"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:name=".TimeTrackerApplication">
 
@@ -14,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.NewCustomerActivity"
+                  android:label="@string/newcustomer_title"/>
+
+        <activity android:name=".activities.NewProjectActivity"
+                  android:label="@string/newproject_title"/>
 
     </application>
 
