--- a/android/pom.xml
+++ b/android/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>guava</artifactId>
             <version>14.0-rc1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
